[package]
name = "sysprobe-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.7.1"
async-trait = "0.1.58"
clap = { version = "4.0.26", features = ["derive"] } 
tempfile = "3.3.0"
tracing = "0.1"
tracing-subscriber = "0.3"
num_cpus = "0.2"
num_enum = "0.5.7"
tokio = { version = "1.22.0", features = ["full"] }
